meal.less - image stretching in carousel fixed

--- a/css/src/meal.less
+++ b/css/src/meal.less
@@ -8,7 +8,6 @@
     }
     & > img {
         width: 150%;
-        height: 150%;
         overflow: hidden;
         text-align: center;
         position: relative;
